--- a/webpagehugo/config.toml
+++ b/webpagehugo/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://yuseib.pages.dev/'
+baseURL = 'http://yuseib-proj.pages.dev/'
 languageCode = 'ja-jp'
 title = 'My New Hugo Site'
 theme = "ananke"
